[package]
name = "bevy_movement"
version = "0.4.0"
authors = ["Trung Do <dothanhtrung@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/kimtinh/bevy_movement"
keywords = ["bevy"]
description = "Bevy plugin for easy move object to a destination"
exclude = ["assets", "examples", "tests", ".cargo"]
categories = ["game-development"]

[dependencies]
bevy = { version = ">=0.18", features = ["bevy_state"], default-features = false }
avian3d = { version = "0.6", optional = true }
avian2d = { version = "0.6", optional = true }
leafwing-input-manager = { version = "0.20", optional = true }

[dev-dependencies]
bevy = { version = ">=0.18", features = ["dynamic_linking"] }
fastrand = "2.3"

[features]
default = []
2d = []
physic = []
physic_3d = ["physic", "avian3d"]
physic_2d = ["physic", "2d", "avian2d"]
mouse_control = ["bevy/bevy_render", "bevy/bevy_window"]
kb_control = ["leafwing-input-manager"]

[[example]]
name = "mouse_control"
required-features = ["mouse_control"]
