[package]
name = "bevy_movement"
version = "0.3.0"
authors = ["Trung Do <dothanhtrung@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/kimtinh/bevy_movement"
keywords = ["bevy"]
description = "Bevy plugin for easy move object to a destination"
exclude = ["assets", "examples", "tests", ".cargo"]
categories = ["game-development"]

[dependencies]
bevy = { version = ">=0.18", features = ["bevy_state"], default-features = false }
avian3d = { version = "0.6", optional = true }
avian2d = { version = "0.6", optional = true }
leafwing-input-manager = { version = "0.20", optional = true }
bevy_northstar = { version = "0.6", optional = true }

[dev-dependencies]
bevy = { version = ">=0.18", features = ["dynamic_linking"] }
fastrand = "2.4"

[features]
default = ["mouse_control", "kb_control"]
2d = []
# physic_3d and physic_2d cannot be enabled at the same time
physic_3d = ["avian3d"]
physic_2d = ["2d", "avian2d"]

mouse_control = ["bevy/bevy_render", "bevy/bevy_window"]
kb_control = ["leafwing-input-manager"]
path_finding = ["bevy_northstar"]


[[example]]
name = "simple_2d"
required-features = ["2d"]

[[example]]
name = "input_control_3d"
required-features = ["mouse_control", "kb_control"]

[[example]]
name = "input_control_2d"
required-features = ["mouse_control", "kb_control", "2d"]

[[example]]
name = "path_finding"
required-features = ["2d", "path_finding", "mouse_control"]